# metis-job

./: .gitignore  README.md  pyproject.toml
docs/: Testing Spark Streaming.ipynb
docs/job/: spark-job.md
docs/model/: model.md
docs/repo/: repository.md
docs/schema/: table-schema.md
docs/util/: secrets.md
metis_job/: __init__.py  cloud_files.py  config.py  job.py  namespace.py  schema.py  session.py  table.py
metis_job/initialiser/: di.py  helpers.py
metis_job/repo/: __init__.py  properties.py  readers.py  repo_messages.py  spark_util.py  sql_builder.py  streamer_readers.py  streamer_writers.py  writers.py
metis_job/runner/: __init__.py  batch_runner.py  job_runner.py  simple_batcher.py  simple_job.py  simple_streamer.py  value.py
metis_job/structure/: __init__.py  schema_util.py  value.py  vocab_util.py
metis_job/util/: chronos.py  dataklass.py  error.py  error_messages.py  json_util.py  logger.py  mod.py  monad.py
tests/: test_job_config_for_test.py  test_namespaces.py  test_naming.py  test_session.py  test_tables.py
tests/fixtures/: table1_rows.json  table1_rows_3.json  table1_rows_with_delete.json  table2_rows.json
tests/shared/: __init__.py  data.py  di.py  init_state_spy.py  job_config_test.py  namespaces_and_tables.py  spark_test_session.py  vocab.py
tests/test_job/: test_batch_job.py  test_simple_job.py
tests/test_schema/: test_spark_schema.py  test_structure.py  test_vocab.py
tests/test_table/: test_spark_util.py  test_streaming.py  test_table_properties.py  test_table_read.py  test_table_writing.py
(+14 files in other folders)
